styles/app.css
/*reset*/
html, body, div, span, a, p, ul, li, h1, code, nav {
  margin: 0;
  border: 0;
  padding: 0;
  box-sizing: inherit;
  font: inherit;
  text-decoration: inherit;
  text-align: inherit;
  color: inherit;
  background: transparent;
}

html {
  /*background-color: rgb(0, 120, 0);*/
}

body {
  font-family: helvetica neue, helvetica, sans-serif;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.025em;

  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  -ms-text-size-adjust: none;
  text-size-adjust: none;

  /*required for IE/Edge to be compatible with left:50vw & transform:translate(-50%, 0),
  otherwise there is a phantom div on the right side of the screen (from the left:50vw),
  that the window will scroll to*/
  overflow-x: hidden;
}

/*root div in index.html*/
#root {
  min-height: 100vh;
  /*background-color: #F0F0F0;*/
}

/*reactroot div*/
#root > div {
  min-width: 34vw;
  max-width: 1200px;
  padding: 3vh 0 12vh 0;

  /*center based on vw to prevent content jump when vertical scroll bar show/hide
  note: vw/vh include the width of scroll bars*/
  position: relative;
  left: 50vw;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  -o-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
}

/*use responsive max-width to simulate padding/margin to allow
space for vertical scroll bar without creating horizontal scroll bar
(if there is padding, the window will scroll horizontally to show the padding) */
@media (max-width: 540px) {
  #root > div {
    max-width: calc(100vw - 40px);
  }
}

/*links*/
a {
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  color: #d9230f;
}

/*custom bullets*/
li {
  list-style: none;
  padding-left: 18px;
  text-indent: -15px;
  margin: 0.5vh 0;
}

li:before {
  content: "\2013";
  padding-right: 7px;
}

/*title*/
h1 {
  font-size: 1.7em;
  margin-bottom: 0.5vh;
}

/*repo link*/
#root > div > a {
  font-size: 14px;
}

/*map menu*/
nav {
  margin: 3vh 0;
}

p {
  margin: 3vh 0;
  line-height: 1.4;
}

code {
  font-family: monospace;
  font-size: 15px;
  padding-left: 2px;
}

#root > div > div > div {
  margin: 1vh 0;
}

#root > div > div > div > div {
  margin: 3vh 0;
}
.social-contact {
    width: 100%;
}

.social .sub-text-social {
    color: #808080;
    text-align: center;

}

pre {
    overflow: auto;
    display: block;
    padding: 9.5px;
    margin: 0 0 10px;
    font-size: 13px;
    line-height: 1.42857143;
    color: #333;
    word-break: break-all;
    word-wrap: break-word;
    background-color: #f5f5f5;
    border: 1px solid #ccc;
    border-radius: 4px;

}

